fix spacing

--- a/frontend/src/components/BookIndex/BookIndex.css
+++ b/frontend/src/components/BookIndex/BookIndex.css
@@ -4,6 +4,7 @@
     column-gap: 10px;
     row-gap: 10px;
     grid-template-columns: auto auto auto;
+    margin-left: 2%;
 }
 
 /* 
@@ -57,6 +58,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: rgb(227, 227, 227);
+    text-shadow: 0 0 2px rgb(0, 0, 0);
 }
 
 .books-index-title {
